# MCPP2018

./: .travis.yml  CMakeLists.txt  Doxyfile.in
cmake/: Functions.cmake  McppConfig.cmake  McppFind.cmake
cmake/modules/: FindSockets.cmake
src/: CMakeLists.txt
src/core/: CMakeLists.txt  any_storage.cpp  system_error.cpp  try_copy_n.cpp
src/core/include/mcpp/: allocate_unique.hpp  any_storage.hpp  async_result.hpp  cast_output_iterator.hpp  checked.hpp  completion_handler_base.hpp  debug_async_stream.hpp  handle.hpp  hex_dump.hpp  lowest_layer.hpp  polymorphic_ptr.hpp  prefix_buffer_sequence.hpp  remove_optional.hpp  remove_rvalue_reference.hpp  suffix_buffer_sequence.hpp  system_error.hpp  try_copy_n.hpp
src/core/tests/: CMakeLists.txt  allocate_unique.cpp  any_storage.cpp  async_result.cpp  cast_output_iterator.cpp  checked.cpp  completion_handler_base.cpp  debug_async_stream.cpp  handle.cpp  hex_dump.cpp  lowest_layer.cpp  polymorphic_ptr.cpp  prefix_buffer_sequence.cpp  remove_optional.cpp  remove_rvalue_reference.cpp  suffix_buffer_sequence.cpp  system_error.cpp  try_copy_n.cpp
src/crypto/: CMakeLists.txt  bignum.cpp  evp_cipher_ctx.cpp  evp_md_ctx.cpp  rsa.cpp  system_error.cpp
src/crypto/include/mcpp/crypto/: bignum.hpp  evp_cipher_ctx.hpp  evp_cipher_stream.hpp  evp_md_ctx.hpp  rsa.hpp  system_error.hpp
src/crypto/tests/: CMakeLists.txt  evp_cipher_ctx.cpp  evp_cipher_stream.cpp  evp_md_ctx.cpp  rsa.cpp
src/mcpp_core/: CMakeLists.txt
src/mcpp_core/tests/: CMakeLists.txt
src/mcpp_test/: CMakeLists.txt
src/mcpp_test/include/mcpp/test/: object.hpp
src/nbt/: CMakeLists.txt  iterator_sax_writer.cpp  ostream_sax_observer.cpp  sax_parse.cpp
src/nbt/include/mcpp/nbt/: iterator_sax_writer.hpp  ostream_sax_observer.hpp  sax_parse.hpp
src/nbt/tests/: CMakeLists.txt  iterator_sax_writer.cpp  sax_parse.cpp
src/nbt_test/: CMakeLists.txt
src/nbt_test/include/mcpp/nbt/test/: sax_observer.hpp
src/protocol/: CMakeLists.txt  async_read.cpp  compress.cpp  decompress.cpp
src/protocol/include/mcpp/protocol/: async_read.hpp  async_write.hpp  compress.hpp  decompress.hpp
src/protocol/tests/: CMakeLists.txt  async_read.cpp  async_write.cpp  compress.cpp  decompress.cpp
src/rapidjson/: CMakeLists.txt  bool_parser.cpp  done_parser_base.cpp  parser_base.cpp  uint_parser.cpp
src/rapidjson/include/mcpp/rapidjson/: array_parser.hpp  bool_parser.hpp  const_buffer_sequence_read_stream.hpp  done_parser_base.hpp  iterator_read_stream.hpp  key.hpp  parser_base.hpp  state_machine_parser_base.hpp  string.hpp  string_parser.hpp  uint_parser.hpp
src/rapidjson/tests/: CMakeLists.txt  array_parser.cpp  bool_parser.cpp  const_buffer_sequence_read_stream.cpp  iterator_read_stream.cpp  state_machine_parser_base.cpp  string_parser.cpp  uint_parser.cpp
src/serialization/: CMakeLists.txt  string.cpp  varint.cpp
src/serialization/include/mcpp/serialization/: async_read_varint.hpp  async_write_varint.hpp  endian.hpp  hex_digest.hpp  string.hpp  varint.hpp
src/serialization/tests/: CMakeLists.txt  async_read_varint.cpp  async_write_varint.cpp  endian.cpp  hex_digest.cpp  string.cpp  varint.cpp
src/test/: CMakeLists.txt  allocator.cpp  handler.cpp  object.cpp
src/test/include/mcpp/test/: allocator.hpp  buffer_async_read_stream.hpp  buffer_async_write_stream.hpp  handler.hpp
src/test/tests/: CMakeLists.txt  buffer_async_read_stream.cpp
src/yggdrasil/: CMakeLists.txt  agent.cpp  authenticate.cpp  body_reader.cpp  body_writer.cpp  error.cpp  profile.cpp  property.cpp  user.cpp
src/yggdrasil/example/: CMakeLists.txt  example.cpp
src/yggdrasil/include/mcpp/yggdrasil/: agent.hpp  authenticate.hpp  body.hpp  body_reader.hpp  body_writer.hpp  error.hpp  profile.hpp  property.hpp  user.hpp
src/yggdrasil/tests/: CMakeLists.txt  agent.cpp  authenticate.cpp  body_reader.cpp  body_writer.cpp  error.cpp  profile.cpp  property.cpp  user.cpp
src/zlib/: CMakeLists.txt  deflate.cpp  inflate.cpp  stream.cpp  system_error.cpp
src/zlib/include/mcpp/zlib/: deflate.hpp  deflate_stream.hpp  inflate.hpp  inflate_stream.hpp  stream.hpp  system_error.hpp
src/zlib/tests/: CMakeLists.txt  deflate.cpp  inflate.cpp
travis/install_test/: CMakeLists.txt  test.cpp
